--- a/gmall-api/pom.xml
+++ b/gmall-api/pom.xml
@@ -8,9 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.atguigu.gmall</groupId>
-    <artifactId>gmall-user</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>gmall-user</name>
+    <artifactId>gmall-api</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>gmall-api</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -19,19 +19,15 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.atguigu.gmall</groupId>
-            <artifactId>gmall-service-util</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.atguigu.gmall</groupId>
-            <artifactId>gmall-web-util</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.atguigu.gmall</groupId>
-            <artifactId>gmall-api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>1.2.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-jdbc</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
